css fix for github items view on mobile

--- a/modules/github/site.css
+++ b/modules/github/site.css
@@ -3,5 +3,4 @@
 .github_connect_section .server_title { margin-bottom: 10px; }
 .github_disconnect { margin-left: 20px; margin-top: 20px; }
 .configured_repo { margin-bottom: 5px; }
-.github_para { width: 60%; margin-bottom: 20px; }
 .github_link { margin-bottom: 10px; }
